--- a/addProduct/addProduct.html
+++ b/addProduct/addProduct.html
@@ -1,1 +1,32 @@
-.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add Product</title>
+    <link rel="stylesheet" href="addProductPC.css">
+    <link rel="stylesheet" href="addProductMobile.css" media="screen and (max-width: 500px)">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=New Rocker">
+</head>
+<body>
+    <header>
+        <div class="titulo">
+            <h1>NEW</h1>
+            <h1>T-SHIRT</h1>
+        </div>
+    </header>
+
+    <main>
+        
+        <section>
+            <div class="addImg">
+                <img src="/imagenes/Group 2.png" alt="">
+            </div>
+        </section>
+
+
+    </main>
+
+    
+</body>
+</html>
