--- a/addProduct/addProduct.html
+++ b/addProduct/addProduct.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product</title>
-    <link rel="stylesheet" href="addProductPC.css">
-    <link rel="stylesheet" href="addProductMobile.css" media="screen and (max-width: 500px)">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=New Rocker">
+    <link rel="stylesheet" href="addProductMobile.css" media="screen and (max-width: 600px)">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=New Rocker|Raleway">
 </head>
 <body>
     <header>
@@ -18,10 +17,52 @@
 
     <main>
         
-        <section>
+        <section class="firstSection">
+
             <div class="addImg">
-                <img src="/imagenes/Group 2.png" alt="">
+
+                <div class="camiseta">
+                    <img src="/imagenes/Group 2.png" alt="">
+                </div>
+
+                <div class="colores">
+                    <img src="/imagenes/Group 3.png" alt="">
+                </div>
             </div>
+        </section>
+
+        <section class="secondSection">
+
+            <div class="formulario">
+                <form>
+                    <input type="text" name="ID" placeholder="ID"><br><br>
+                    <input type="text" name="Nombre" placeholder="Name"><br><br>
+                    <input type="text" name="Precio" placeholder="Price"><br><br>
+                    <input type="text" name="Grupo" placeholder="Group"><br><br>
+                </form>
+            </div>
+        </section>
+
+        <section class="thirdSection">
+
+            <div class="selector">
+
+                <div class="coloresDisponibles">
+                    <img src="/imagenes/ColoresDisponibles.png" alt="">
+                </div>
+
+                <div class="tallasDisponibles">
+                    <img src="/imagenes/Tallas Disponibles.png" alt="">
+                </div>
+
+                <div class="Enviar">
+                    <form>
+                        <input type="Submit" value="ADD">
+                    </form>
+                </div>
+
+            </div>
+
         </section>
 
 
