--- a/addProduct/addProduct.html
+++ b/addProduct/addProduct.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product</title>
-    <link rel="stylesheet" href="addProductMobile.css" media="screen and (max-width: 600px)">
+    <link rel="stylesheet" href="addProduct.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=New Rocker|Raleway">
 </head>
 <body>
