--- a/register/register.html
+++ b/register/register.html
@@ -17,18 +17,18 @@
     <main>
         <section class="formulario">
             <form>
-                <input type="text" name="ID" placeholder="First Name*"><br><br>
-                <input type="text" name="Nombre" placeholder="Last Name*"><br><br>
+                <input type="text" name="Nombre" placeholder="First Name*"><br><br>
+                <input type="text" name="Apellidos" placeholder="Last Name*"><br><br>
                 <input type="text" name="Email" placeholder="Email Address*"><br><br>
-                <input type="text" name="Contrasena" placeholder="Default Password"><br><br>
-                <input type="text" name="Contrasena" placeholder="Phone Number"><br><br><br>
+                <input type="text" name="Password" placeholder="Default Password"><br><br>
+                <input type="text" name="Telefono" placeholder="Phone Number"><br><br><br>
             </form>
         </section>
 
-        <section>
+        <section class="Boton">
             <div class="Enviar">
                 <form>
-                    <input type="Submit" value="ADD">
+                    <input type="Submit" value="REGISTER NEW USER">
                 </form>
             </div>
         </section>
