--- a/login/login.html
+++ b/login/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=New Rocker|Raleway">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=New Rocker|Raleway|Shippori Antique B1|Signika">
 </head>
 <body>
 
@@ -44,15 +44,15 @@
             </form>
         </section>
 
-        <section>
+        <section class="enlaces">
 
             <div class="password">
                 <a href="#">Forgot password?</a>
             </div>
 
-            <div class="password">
+            <div class="newMember">
                 <p>Not a member?</p>
-                <a href="/register/register.html">Sing up now</a>
+                <a href="/register/register.html" class="registro">Sing up now</a>
             </div>
 
 
