--- a/login/login.html
+++ b/login/login.html
@@ -52,7 +52,7 @@
 
             <div class="newMember">
                 <p>Not a member?</p>
-                <a href="/register/register.html" class="registro">Sing up now</a>
+                <a href="#" class="registro">Sing up now</a>
             </div>
 
 
