--- a/mainPage/mainPage.html
+++ b/mainPage/mainPage.html
@@ -19,7 +19,7 @@
 
             <img src="/imagenes/lupa.png" id="lupa">
     
-            <div class="iconos">
+            <div class="iconos clase2">
 
                 <a href="/addProduct/addProduct.html"><img src="/imagenes/addT-shirt.png"></a>
     
