--- a/addProduct/addProduct.html
+++ b/addProduct/addProduct.html
@@ -58,7 +58,7 @@
         <section class="thirdSection">
 
             <div class="Enviar">
-                <form>
+                <form action="/mainPage/mainPage.html">
                     <input type="Submit" value="ADD">
                 </form>
             </div>
