--- a/mainPage/mainPage.html
+++ b/mainPage/mainPage.html
@@ -6,6 +6,7 @@
     <title>Main Page</title>
     <link rel="stylesheet" href="mainPage.css">
     <link href="https://fonts.cdnfonts.com/css/nats" rel="stylesheet">
+    <link rel="stylesheet" href="printstyle.css" media="print">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=New Rocker|Raleway|Shippori Antique B1|Signika|Odor Mean Chey|NATS|Orelega One">
 </head>
 <body>
@@ -97,7 +98,8 @@
                 </div>
 
                 <div class="etiquetas">
-                    <p>Camiseta</p>
+                    <p>Camiseta Marea</p>
+                    <p>18,99</p>
                 </div>
 
             </div>
