--- a/login/login.html
+++ b/login/login.html
@@ -13,7 +13,7 @@
         <img src="/imagenes/Fondo guitarra.png">
     </header>
 
-    <form id="formulario">
+    <form id="formulario" action="/mainPage/mainPage.html">
         <input type="text" name="username" placeholder="Username">
         <input type="password" name="password" placeholder="Password">
         <label><input type="checkbox" name="Remember">Remember me</label>
