--- a/register/register.html
+++ b/register/register.html
@@ -17,7 +17,7 @@
         <h1>REGISTER</h1>
     </header>
 
-    <form id="formulario">
+    <form id="formulario" action="/mainPage/mainPage.html">
         <div>
             <input type="text" name="name" placeholder="Nombre*" id="nombre">
             <span id="errorNombre" class="mensajeError"></span>
