--- a/mainPage/mainPage.html
+++ b/mainPage/mainPage.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.cdnfonts.com/css/nats" rel="stylesheet">
     <link rel="stylesheet" href="printstyle.css" media="print">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=New Rocker|Raleway|Shippori Antique B1|Signika|Odor Mean Chey|NATS|Orelega One">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -50,9 +52,7 @@
                 <li id="desaparecer" >Pignoise</li>
                 <li id="desaparecer">Robe</li>
                 <li id="desaparecer">Mana</li>
-                <li id="desaparecer">Mago de Oz</li>
                 <li id="desaparecer">Melendi</li>
-                <li id="desaparecer">Ska-P</li>
                 <img src="/imagenes/FlechaNav.png" id="flecha">
             </ul>
            
