--- a/mainPage/mainPage.html
+++ b/mainPage/mainPage.html
@@ -6,10 +6,8 @@
     <title>Main Page</title>
     <link rel="stylesheet" href="mainPage.css">
     <link href="https://fonts.cdnfonts.com/css/nats" rel="stylesheet">
-    <link rel="stylesheet" href="printstyle.css" media="print">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=New Rocker|Raleway|Shippori Antique B1|Signika|Odor Mean Chey|NATS|Orelega One">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="mainPage.js"></script>
 </head>
 <body>
 
@@ -64,63 +62,10 @@
 
         <h1>Top Sales</h1>
 
-        <div class="camisetas">
-
-            <div class="contenedor camisetaConMargen">
-
-                <div class="foto">
-                    <img src="/imagenes/camisetas/CmisetaFito.png" alt="">
-                    <img src="/imagenes/camisetas/ColoresDisponibles.png" id="colores">
-                </div>
-
-                <div class="etiquetas">
-                    <p>Camiseta Fito y Fitipaldis</p>
-                    <p>18,99</p>
-                </div>
-
-            </div>
-
-            <div class="contenedor" id="desaparecer">
-
-                <div class="foto" >
-                    <img src="/imagenes/camisetas/C062-extremoduro-1530808670 1.png" alt="">
-                    <img src="/imagenes/camisetas/ColoresDisponibles.png"  id="colores">
-                </div>
-
-                <div class="etiquetas">
-                    <p>Camiseta Extremoduro</p>
-                    <p>18,99</p>
-                </div>
-
-            </div>
-
-            <div class="contenedor dividir" id="desaparecer" >
-
-                <div class="foto">
-                    <img src="/imagenes/camisetas/camiseta-marea 1.png" alt="">
-                    <img src="/imagenes/camisetas/ColoresDisponibles.png" id="colores">
-                </div>
-
-                <div class="etiquetas">
-                    <p>Camiseta Marea</p>
-                    <p>18,99</p>
-                </div>
-
-            </div>
-
-            <div class="deslizar">
-
-                <img src="/imagenes/Vector 1.png" alt="">
-
-            </div>
+        <div class="camisetas" id="camisetas">
 
         </div>
-
-        <div class="flecha">
-            <img src="/imagenes/camisetas/Flecha.png" alt="">
-        </div>
-
-    
+ 
     </main>
 
     <footer>
