--- a/addProduct/addProduct.html
+++ b/addProduct/addProduct.html
@@ -36,10 +36,14 @@
 
             <div class="formulario">
                 <form id="formulario">
-                    <input type="text" name="nombre" placeholder="Name"><br><br>
-                    <input type="text" name="precio" placeholder="Price"><br><br>
-                    <input type="text" name="grupo" placeholder="Group"><br><br>
-                    <input type="text" name="imagensrc" placeholder="ImagenSrc"><br><br>
+                    <input type="text" name="nombre" placeholder="Name" id="nombre"><br><br>
+                    <span id="errorNombre" class="error"></span><br><br>
+                    <input type="text" name="precio" placeholder="Price" id="precio"><br><br>
+                    <span id="errorPrecio" class="error"></span><br><br>
+                    <input type="text" name="grupo" placeholder="Group" id="grupo"><br><br>
+                    <span id="errorGrupo" class="error"></span><br><br>
+                    <input type="text" name="imagensrc" placeholder="ImagenSrc" id="imagen"><br><br>
+                    <span id="errorImagen" class="error"></span><br><br>
             </div>
 
             <div class="selector">
