--- a/register/register.html
+++ b/register/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,33 +13,33 @@
 <body>
 
     <header>
-        <img src="/imagenes/logos/666201 2.png">
-        <h1>REGISTER</h1>
+        <img src="/imagenes/logos/666201 2.png" alt="icono usuario" aria-hidden="true">
+        <h1 tabindex="0" aria-label ="Formulario Registro">REGISTER</h1>
     </header>
 
-    <form id="formulario" action="/mainPage/mainPage.html">
+    <form id="formulario" action="/mainPage/mainPage.html" >
         <div>
-            <input type="text" name="name" placeholder="Nombre*" id="nombre">
-            <span id="errorNombre" class="mensajeError"></span>
+            <input type="text" name="name" placeholder="Nombre*" id="nombre" aria-required="true" aria-errormessage="errorNombre">
+            <span id="errorNombre" class="mensajeError" tabindex="-1"></span>
         </div>
 
         <div>
-            <input type="text" name="username" placeholder="Username*" id="username">
-            <span id="errorUsername" class="mensajeError"></span>
+            <input type="text" name="username" placeholder="Username*" id="username" aria-required="true">
+            <span id="errorUsername" class="mensajeError" tabindex="-1"></span>
         </div>
 
         <div>
-            <input type="text" name="email" placeholder="Email*" id="email">
-            <span id="errorEmail" class="mensajeError"></span>
+            <input type="text" name="email" placeholder="Email*" id="email" aria-required="true">
+            <span id="errorEmail" class="mensajeError" tabindex="-1"></span>
         </div>
 
         <div>
-            <input type="password" name="password" placeholder="Password" id="password">
-            <span id="errorPassword" class="mensajeError"></span>
+            <input type="password" name="password" placeholder="Password*" id="password" aria-required="true">
+            <span id="errorPassword" class="mensajeError" tabindex="-1"></span>
         </div>
 
-        <input type="Submit" value="REGISTER NEW USER">
-        <p id="errorForm" class="mensajeError"></p>
+        <input type="Submit" value="REGISTER NEW USER" aria-label ="Registrar usuario">
+        <p id="errorForm" class="mensajeError" tabindex="-1"></p>
     </form>
 
 </body>
